add cmt LAB1-LAB2

--- a/numpy_pandas_matplotlib.ipynb
+++ b/numpy_pandas_matplotlib.ipynb
@@ -977,6 +977,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### input\n",
+    "dùng numpy để tạo mảng dữ liệu có kích thước 150 5 với mỗi hàng chứa 5 giá trị (float) ngẫu nhiên từ 0 - 10\n",
+    "Dữ liệu đại diện cho 150 sinh viên với 5 đặc điểm chiều cao, cân nặng, tuổi, lương, GPA\n",
+    "#### output\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2 PANDAS"
    ]
   },
